# rayforce-rs

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs  wrapper.h
.github/workflows/: docs.yml
docs/: CNAME  mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/content/api/: ffi.md  ipc.md  overview.md
docs/docs/content/api/queries/: insert.md  joins.md  select.md  update.md  upsert.md
docs/docs/content/api/types/: containers.md  scalars.md  table.md
docs/docs/content/examples/: index.md
docs/docs/content/get-started/: installation.md  overview.md  quickstart.md
docs/docs/css/: custom.css
docs/overrides/partials/: copyright.html
examples/: basic.rs  repl.rs
src/: error.rs  ffi.rs  ipc.rs  lib.rs  query.rs
src/types/: containers.rs  mod.rs  operators.rs  scalars.rs  table.rs
tests/: test_conversions.rs  test_dicts.rs  test_ffi.rs  test_lists.rs  test_runtime.rs  test_scalars.rs  test_strings.rs  test_vectors.rs
tests/common/: mod.rs
