[package]
name = "rayforce"
version = "0.1.0"
edition = "2021"
authors = ["RayforceDB Team"]
description = "Safe Rust bindings for RayforceDB - the ultra-fast columnar database"
license = "MIT"
repository = "https://github.com/RayforceDB/rayforce-rs"
homepage = "https://rayforcedb.com"
documentation = "https://rs.rayforcedb.com"
readme = "README.md"
keywords = ["database", "rayforce", "columnar", "time-series", "analytics"]
categories = ["database", "api-bindings"]
rust-version = "1.70"

[lib]
name = "rayforce"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
thiserror = "2.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
once_cell = "1.19"
serial_test = "3.0"
reedline = "0.38"
nu-ansi-term = "0.50"
dirs-next = "2.0"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"
pkg-config = "0.3"

[features]
default = []
# Enable this to use system-installed rayforce instead of building from source
system-rayforce = []
